<resources>
    <string name="app_name">Mały Klaksonik</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="sign_up">Sign Up</string>
    <string name="description_1">Welcome to our app,\nwhere you can rent your car just by walking up to it!</string>
    <string name="description_2">Find and reserve nearby cars\nin just a few taps.</string>
    <string name="description_3">Unlock, drive and go\nall from your phone.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_text">Login to your account</string>
    <string name="login_error_1">Please fill in all fields</string>
    <string name="login_error_2">Email or password is incorrect</string>
    <string name="login_error_3">Server error</string>
    <string name="login_success">Login successful</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="theme">Dark mode</string>
    <string name="select_language">Select language</string>
    <string name="language_poland">Polski</string>
    <string name="language_england">English</string>
    <string name="language_germany">Deutsch</string>
    <string name="email_text">Enter your email</string>
    <string name="email_error_1">Email cannot be empty</string>
    <string name="email_error_2">Email is not valid</string>
    <string name="email_error_3">Email is already taken</string>
    <string name="password_text">Enter your password</string>
    <string name="password_req_1">Minimum of 8 characters</string>
    <string name="password_req_2">At least one number</string>
    <string name="password_req_3">At least one capital letter</string>
    <string name="password_req_4">At least one lowercase letter</string>
    <string name="password_req_5">At least one special character</string>
    <string name="register_user_text">Complete your details</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="phone">Phone</string>
    <string name="license_number">License number</string>
    <string name="license_exp">License expiration date</string>
    <string name="name_error">Enter a valid name</string>
    <string name="surname_error">Enter a valid surname</string>
    <string name="phone_error">Enter a valid phone number</string>
    <string name="phone_error_taken">Phone number is already taken</string>
    <string name="license_number_error">Enter a valid license number</string>
    <string name="license_exp_error">License date required</string>
    <string name="summary">Summary</string>
    <string name="register">Register</string>
    <string name="error_register">Failed to register</string>
    <string name="error_unknown">Unknown error</string>
    <string name="register_good">User registered</string>
    <string name="date_invalid">Invalid date</string>
    <string name="navigation_menu_1">Home</string>
    <string name="navigation_menu_2">Search</string>
    <string name="navigation_menu_3">Map</string>
    <string name="navigation_menu_4">Settings</string>
    <string name="settings_temp_user">Name Username</string>
    <string name="settings_theme">Dark mode</string>
    <string name="settings_language">Language</string>
    <string name="settings_edit_profile">Edit profile</string>
    <string name="settings_change_password">Change password</string>
    <string name="settings_change_email">Change email</string>
    <string name="settings_balance">Balance</string>
    <string name="settings_history">Reservation history</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_logout_confirmation">Are you sure you want to log out?</string>
    <string name="settings_logout_success">Logged out successfully</string>
    <string name="settings_logout_error">Logout failed</string>
    <string name="settings_divider_profile">Profile</string>
    <string name="settings_divider_regional">Regional</string>
    <string name="settings_divider_application">Application</string>
    <string name="edit_profile">Edit profile</string>
    <string name="save">Save</string>
    <string name="edit_profile_success">Profile updated successfully</string>
    <string name="change_password">Change password</string>
    <string name="password_hint">Old password</string>
    <string name="type_old_password">Enter old password</string>
    <string name="type_new_password">Enter new password</string>
    <string name="check_button">Check</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="password_error_1">Password cannot be empty</string>
    <string name="password_change_success">Password changed successfully</string>
    <string name="password_change_error">New password cannot be the same as the old password</string>
    <string name="change_email">Change email</string>
    <string name="change_email_successful">Change email successful</string>
    <string name="change_email_error">Email already registered</string>
    <string name="welcome_text">Hello,\nUsername</string>
    <string name="balance">0,00 zł</string>
    <string name="current_rental">Current rental</string>
    <string name="empty_rental_text">Currently, you are not renting anything\nClick to rent something</string>
    <string name="rental_history">Rental history</string>
    <string name="empty_history_text">You currently have no rental history</string>
    <string name="your_balance">Your balance</string>
    <string name="transactions">Transactions:</string>
    <string name="description_transaction">Deposit funds using Google Pay</string>
    <string name="transaction_status">Rejected</string>
    <string name="transaction_date">12:00 01–10–2023</string>
    <string name="add_funds">Add funds</string>
    <string name="funds_to_add">0 zł</string>
    <string name="payment_method">Payment method:</string>
    <string name="payment_method_1">Credit card</string>
    <string name="payment_method_2">PayPal</string>
    <string name="payment_method_3">Blik</string>
    <string name="payment_method_4">Google Pay</string>
    <string name="payment_method_5">Apple Pay</string>
    <string name="keyboard_1">1</string>
    <string name="keyboard_2">2</string>
    <string name="keyboard_3">3</string>
    <string name="keyboard_4">4</string>
    <string name="keyboard_5">5</string>
    <string name="keyboard_6">6</string>
    <string name="keyboard_7">7</string>
    <string name="keyboard_8">8</string>
    <string name="keyboard_9">9</string>
    <string name="keyboard_0">0</string>
    <string name="keyboard_backspace">←</string>
    <string name="keyboard_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_funds_success">Funds added successfully</string>
    <string name="add_funds_using">Deposit funds using</string>
    <string name="add_funds_error">The minimum amount to be deposited is 20 zł</string>
    <string name="carName">Car Name</string>
    <string name="carCost">Cost: 0.00 zł / min</string>
    <string name="carRating">No reviews</string>
    <string name="noDataShow">No results</string>
    <string name="searchBar">Search…</string>
    <string name="sortAlphabetically">Alphabetically</string>
    <string name="sortPriceLow">Price: Low to High</string>
    <string name="sortPriceHigh">Price: High to Low</string>
    <string name="sortRatingLow">Rating: Low to High</string>
    <string name="sortRatingHigh">Rating: High to Low</string>
    <string name="sortNearest">Nearest</string>
    <string name="sortFarthest">Farthest</string>
    <string name="sort">Sort</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
    <string name="cost1">Cost: </string>
    <string name="cost2">zł / min</string>
    <string name="liters">l/100km</string>
    <string name="car_info">Car Info</string>
    <string name="fuel_type">Diesel</string>
    <string name="car_paint">Green</string>
    <string name="car_seats">5</string>
    <string name="car_year">2023</string>
    <string name="car_burns">5.0 l/100km</string>
    <string name="connect_with_car">Connect to the car</string>
    <string name="car_comments">Comments</string>
    <string name="car_comments_username">User name</string>
    <string name="car_comments_text">This is a review text.</string>
    <string name="car_comments_date">2024-03-18 14:45</string>
    <string name="show_reviews">Show reviews</string>
    <string name="no_comments">There are no reviews yet</string>
    <string name="car_is_null">Car info is null</string>
    <string name="permission_req">Permissions required</string>
    <string name="permission_req_text">To connect to a vehicle, the app needs access to Bluetooth and Location.</string>
    <string name="permission_req_button1">Grant permissions</string>
    <string name="permission_req_button2">Cancel</string>
    <string name="bluetooth_on">Bluetooth on</string>
    <string name="bluetooth_off">Bluetooth off</string>
    <string name="dialog_connecting1">Confirmation</string>
    <string name="dialog_connecting2">From that point on, the rental payments will be charged. Do you want to continue?</string>
    <string name="dialog_connecting3">Connect</string>
    <string name="dialog_connecting4">Cancel</string>
    <string name="ble_manager_error1">Bluetooth scan failed:</string>
    <string name="ble_manager_error2">The vehicle was not found</string>
    <string name="ble_manager_error3">Failed to connect to the vehicle</string>
    <string name="ble_manager_error4">Command write error</string>
    <string name="ble_manager_error5">Characteristics not ready</string>
    <string name="time">00:00:00</string>
    <string name="doors">Doors</string>
    <string name="open_doors">Open</string>
    <string name="close_doors">Close</string>
    <string name="end_rental">Finish rental</string>
    <string name="dialog_end_rental1">Confirmation</string>
    <string name="dialog_end_rental2">Are you sure you want to end the rental?</string>
    <string name="dialog_end_rental3">End rental</string>
    <string name="dialog_end_rental4">Cancel</string>
    <string name="next">Next</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="logo">Logo</string>
    <string name="background_main">Main window image</string>
    <string name="language_icon">Language Icon</string>
    <string name="user_icon">User Icon</string>
    <string name="moon_icon">Moon Icon</string>
    <string name="email_icon">Email Icon</string>
    <string name="password_icon">Password Icon</string>
    <string name="arrow_icon">Arrow Icon</string>
    <string name="logout_icon">Logout Icon</string>
    <string name="world_icon">World Icon</string>
    <string name="balance_icon">Balance Icon</string>
    <string name="history_icon">History Icon</string>
    <string name="plus_icon">Plus Icon</string>
    <string name="clock_icon">Clock Icon</string>
    <string name="danger_icon">Warning Icon</string>
    <string name="car_placeholder">Car Placeholder</string>
    <string name="fuel_icon">Fuel Icon</string>
    <string name="paint_icon">Paint Icon</string>
    <string name="date_icon">Date Icon</string>
    <string name="chair_icon">Chair Icon</string>
    <string name="flame_icon">Flame Icon</string>
    <string name="searchMenuIcon">Search</string>
    <string name="filterMenuIcon">Filter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>