<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".ui.fragments.AddFundsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addFundsSettingsToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        app:titleTextColor="@color/onBackground">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_bold"
                android:maxLines="1"
                android:paddingEnd="56dp"
                android:text="@string/add_funds"
                android:textColor="@color/onBackground"
                android:textFontWeight="500"
                android:textSize="22sp"
                tools:ignore="RtlSymmetry" />
        </FrameLayout>

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/toolbarView"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/gradient_button" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="68dp">

            <TextView
                android:id="@+id/textAmountDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="30dp"
                android:text="@string/funds_to_add"
                android:textSize="36sp"
                android:textColor="@color/onBackground"
                android:fontFamily="@font/roboto_bold"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/paymentMethodsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/payment_method"
                android:textSize="16sp"
                android:textColor="@color/onBackground"
                android:fontFamily="@font/roboto_bold"
                app:layout_constraintTop_toBottomOf="@id/textAmountDisplay"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerPaymentMethod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="40dp"
                app:layout_constraintTop_toBottomOf="@id/paymentMethodsText"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/gradient_border"
                android:popupBackground="@drawable/gradient_border"
                android:padding="12dp"/>

            <GridLayout
                android:id="@+id/keyboardGrid"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:columnCount="5"
                android:rowCount="7"
                android:layout_gravity="center"
                android:useDefaultMargins="false"
                android:padding="0dp"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintBottom_toTopOf="@+id/cancelButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="20dp">

                <Button android:id="@+id/keyboard1" android:text="@string/keyboard_1" style="@style/KeypadButton" android:layout_row="0" android:layout_column="0"/>
                <Button android:id="@+id/keyboard2" android:text="@string/keyboard_2" style="@style/KeypadButton" android:layout_row="0" android:layout_column="2"/>
                <Button android:id="@+id/keyboard3" android:text="@string/keyboard_3" style="@style/KeypadButton" android:layout_row="0" android:layout_column="4"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_columnSpan="5"
                    android:layout_row="1"
                    android:background="@color/gray" />

                <Button android:id="@+id/keyboard4" android:text="@string/keyboard_4" style="@style/KeypadButton" android:layout_row="2" android:layout_column="0"/>
                <Button android:id="@+id/keyboard5" android:text="@string/keyboard_5" style="@style/KeypadButton" android:layout_row="2" android:layout_column="2"/>
                <Button android:id="@+id/keyboard6" android:text="@string/keyboard_6" style="@style/KeypadButton" android:layout_row="2" android:layout_column="4"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_columnSpan="5"
                    android:layout_row="3"
                    android:background="@color/gray" />

                <Button android:id="@+id/keyboard7" android:text="@string/keyboard_7" style="@style/KeypadButton" android:layout_row="4" android:layout_column="0"/>
                <Button android:id="@+id/keyboard8" android:text="@string/keyboard_8" style="@style/KeypadButton" android:layout_row="4" android:layout_column="2"/>
                <Button android:id="@+id/keyboard9" android:text="@string/keyboard_9" style="@style/KeypadButton" android:layout_row="4" android:layout_column="4"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_columnSpan="5"
                    android:layout_row="5"
                    android:background="@color/gray" />

                <Button android:id="@+id/keyboardBackspace" android:text="@string/keyboard_backspace" style="@style/KeypadButton" android:layout_row="6" android:layout_column="0"/>
                <Button android:id="@+id/keyboard0" android:text="@string/keyboard_0" style="@style/KeypadButton" android:layout_row="6" android:layout_column="2"/>
                <Button android:id="@+id/keyboardOk" android:text="@string/keyboard_ok" style="@style/KeypadButton" android:layout_row="6" android:layout_column="4"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:layout_rowSpan="7"
                    android:background="@color/gray" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_column="3"
                    android:layout_row="0"
                    android:layout_rowSpan="7"
                    android:background="@color/gray" />

            </GridLayout>

            <TextView
                android:id="@+id/cancelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:text="@string/cancel"
                android:textSize="16sp"
                android:textColor="@color/onBackground"
                android:fontFamily="@font/roboto"
                android:textAlignment="center"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="60dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>