<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/review_image"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/user_icon"
        android:src="@drawable/user_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/review_username"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:text="@string/car_comments_username"
        android:textColor="@color/onBackground"
        android:fontFamily="@font/roboto"
        app:layout_constraintStart_toEndOf="@id/review_image"
        app:layout_constraintEnd_toStartOf="@id/ratingBarComment"
        app:layout_constraintTop_toTopOf="@id/review_image" />

    <RatingBar
        android:id="@+id/ratingBarComment"
        android:progressTint="@color/stars"
        android:secondaryProgressTint="@color/stars"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="78dp"
        android:layout_height="17dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="12dp"
        android:numStars="5"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintTop_toTopOf="@id/review_image"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/review_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="14sp"
        android:textColor="@color/onBackground"
        android:text="@string/car_comments_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/review_image" />

    <TextView
        android:id="@+id/review_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:textSize="12sp"
        android:textColor="@color/onBackgroundVariant"
        android:text="@string/car_comments_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/review_text" />

</androidx.constraintlayout.widget.ConstraintLayout>